# cob_manipulation

./: .travis.rosinstall  README.md
cob_grasp_action/launch/: cob_grasp_action.launch
cob_grasp_action/ros/include/cob_grasp_action/: cob_grasp_action.h
cob_grasp_action/ros/src/: cob_grasp_action.cpp
cob_grasp_generation/files/database/corn_flakes_package/: sdhx_corn_flakes_package.csv  sdhx_corn_flakes_package_mayank.csv
cob_grasp_generation/files/database/tissue_soft_star/: sdhx_tissue_soft_star.csv  sdhx_tissue_soft_star_1.csv
cob_moveit_bringup/launch/: default_warehouse_db.launch  move_group_dual_arm.launch  planning_context.xml  warehouse.launch
cob_moveit_config/launch/: moveit.rviz
cob_moveit_config/raw3-1-2/config/: kinematics.yaml  ompl_planning.yaml
cob_obstacle_distance_moveit/: CMakeLists.txt  package.xml  text
cob_obstacle_distance_moveit/include/cob_obstacle_distance_moveit/: obstacle_distance_moveit.h
cob_obstacle_distance_moveit/launch/: obstacle_distance.launch
cob_obstacle_distance_moveit/scripts/: test_obstacle_publisher.py  test_selfcollision_service.py  test_service_client.py
cob_obstacle_distance_moveit/src/: test_obstacle_subscriber_node.cpp  visualize_obstacle_distance_node.cpp
cob_obstacle_distance_moveit/src/cob_obstacle_distance_moveit/: obstacle_distance_moveit.cpp
